Intentions, no line breaks

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 			
 			<table class="list">
 				<tr class="text">
+					<td class="date">08.17.20</td>
+					<td class="project"><a href="text/on-my-intentions-for-this-website.txt">Intentions for This Website</a></td>
+				</tr>
+				<tr class="text">
 					<td class="date">07.02.20</td>
 					<td class="project"><a href="text/disassociation.txt">Disassociation</a></td>
 				</tr>
