No butter, some heli, intention tweaks

--- a/index.html
+++ b/index.html
@@ -470,6 +470,10 @@
 					<td class="date">07.22.13</td>
 					<td class="project"><a href="etc/fractal-generator/index.html">Line Fractal Generator</a></td>
 				</tr>
+				<tr class="etc">
+					<td class="date">04.16.13</td>
+					<td class="project"><a href="etc/heli/index.html">Helicopter Game</a></td>
+				</tr>
 				<tr class="video">
 					<td class="date">12.18.12</td>
 					<td class="project"><a href="video/rolling-shutter.mp4">Rolling Shutter Post-Processing</a></td>
@@ -505,10 +509,6 @@
 				<tr class="text">
 					<td class="date">11.08.11</td>
 					<td class="project"><a href="text/overcast.txt">Overcast</a></td>
-				</tr>
-				<tr class="image">
-					<td class="date">11.04.10</td>
-					<td class="project"><a href="image/butter.jpg">Butter</a></td>
 				</tr>
 			</table>
 	    </div>
