--- a/etc/balls/index.html
+++ b/etc/balls/index.html
@@ -8,6 +8,16 @@
 		<script src="scripts/jquery.min.js"></script>
 		<script src="scripts/physicsjs-full-0.6.0.min.js"></script>
 		<script src="scripts/main.js"></script>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175605739-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-175605739-1');
+		</script>
 	</head>
 
 	<body>
