--- a/etc/birdcrime/index.html
+++ b/etc/birdcrime/index.html
@@ -6,6 +6,16 @@
 		<link rel="stylesheet" type="text/css" href="reset.css" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<script src="index.js"></script>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175605739-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-175605739-1');
+		</script>
 	</head>
 	
 	<body>
