--- a/etc/fractal-generator/index.html
+++ b/etc/fractal-generator/index.html
@@ -5,8 +5,17 @@
 		<title>Fractal Generator</title>
 		<link href="reset.css" rel="stylesheet" type="text/css">
 		<link href="styles.css" rel="stylesheet" type="text/css">
-		
-		
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175605739-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-175605739-1');
+		</script>
+
 	</head>
 	
 	<body>
