--- a/etc/heli/index.html
+++ b/etc/heli/index.html
@@ -6,6 +6,16 @@
 		
         <link rel="stylesheet" href="styles.css">
 		<script src="heli.js" type="text/javascript"></script>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175605739-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-175605739-1');
+		</script>
 	
 	</head>
 	
