--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="video">
+					<td class="date">08.24.20</td>
+					<td class="project"><a href="video/deluge.mp4">Deluge</a></td>
+				</tr>
 				<tr class="text">
 					<td class="date">08.17.20</td>
 					<td class="project"><a href="text/on-my-intentions-for-this-website.txt">Intentions for This Website</a></td>
