--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 				</tr>
 				<tr class="audio">
 					<td class="date">03.11.18</td>
-					<td class="project"><a href="audio/bwm.aif">BWM</a></td>
+					<td class="project"><a href="audio/bwm.mp3">BWM</a></td>
 				</tr>
 				<tr class="etc">
 					<td class="date">12.03.17</td>
