pupu platter -> mp3

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 				</tr>
 				<tr class="audio">
 					<td class="date">11.15.15</td>
-					<td class="project"><a href="audio/pupu-platter.wav">Pupu Platter</a></td>
+					<td class="project"><a href="audio/pupu-platter.mp3">Pupu Platter</a></td>
 				</tr>
 				<tr class="image">
 					<td class="date">08.17.15</td>
