peaceful piano thoughts

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 					<td class="date">08.24.20</td>
 					<td class="project"><a href="video/deluge.mp4">Deluge</a></td>
 				</tr>
+				<tr class="audio">
+					<td class="date">08.18.20</td>
+					<td class="project"><a href="audio/peaceful-piano-thoughts.mp3">Peaceful Piano Thoughts</a></td>
+				</tr>
 				<tr class="text">
 					<td class="date">08.17.20</td>
 					<td class="project"><a href="text/on-my-intentions-for-this-website.txt">Intentions for This Website</a></td>
