On Algorithmic Media

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="text">
+					<td class="date">09.05.20</td>
+					<td class="project"><a href="text/on-algorithmic-media.txt">On Algorithmic Media</a></td>
+				</tr>
 				<tr class="video">
 					<td class="date">08.24.20</td>
 					<td class="project"><a href="video/deluge.mp4">Deluge</a></td>
