--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 			
 			<table class="list">
 				<tr class="text">
+					<td class="date">10.03.20</td>
+					<td class="project"><a href="text/beauty.txt">Beauty</a></td>
+				</tr>
+				<tr class="text">
 					<td class="date">09.05.20</td>
 					<td class="project"><a href="text/on-algorithmic-media.txt">On Algorithmic Media</a></td>
 				</tr>
