Flat Picks Season 3

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 			</div>
 			
 			<table class="list">
+				<tr class="image">
+					<td class="date">04.24.20</td>
+					<td class="project"><a href="image/flat-picks.png">Flat Picks Illustration</a></td>
+				</tr>
+				<tr class="etc">
+					<td class="date">10.10.20</td>
+					<td class="project"><a href="https://open.spotify.com/playlist/442CwkAO1CNU0TEnstZQc6?si=xABKoa-WS7S6vaI4RLHDIg">Flat Picks - Season 3</a></td>
+				</tr>
 				<tr class="text">
 					<td class="date">10.03.20</td>
 					<td class="project"><a href="text/beauty.txt">Beauty</a></td>
