A few more beats

--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
 					<td class="date">11.23.20</td>
 					<td class="project"><a href="video/caged-love.mp4">Caged Love</a></td>
 				</tr>
+				<tr class="audio">
+					<td class="date">11.15.20</td>
+					<td class="project"><a href="audio/dark-aromas.mp3">Dark Aromas</a></td>
+				</tr>
+				<tr class="audio">
+					<td class="date">11.11.20</td>
+					<td class="project"><a href="audio/sams-danze.mp3">Sam's Danze</a></td>
+				</tr>
+				<tr class="audio">
+					<td class="date">10.18.20</td>
+					<td class="project"><a href="audio/rainy-daze.mp3">Rainy Daze</a></td>
+				</tr>
 				<tr class="etc">
 					<td class="date">10.10.20</td>
 					<td class="project"><a href="https://open.spotify.com/playlist/442CwkAO1CNU0TEnstZQc6?si=xABKoa-WS7S6vaI4RLHDIg">Flat Picks - Season 3</a></td>
