--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 			</div>
 			
 			<table class="list">
+				<tr class="etc">
+					<td class="date">12.04.20</td>
+					<td class="project"><a href="https://www.instagram.com/ar/2785873261740920/">Outlines</a></td>
+				</tr>
+				<tr class="image">
+					<td class="date">11.24.20</td>
+					<td class="project">Warpy Weirdness <a href="image/warpy-weirdness-1.png">[1]</a> <a href="image/warpy-weirdness-2.png">[2]</a> <a href="image/warpy-weirdness-3.png">[3]</a></td>
+				</tr>
 				<tr class="video">
 					<td class="date">11.23.20</td>
 					<td class="project"><a href="video/caged-love.mp4">Caged Love</a></td>
