Salute the Cube

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="audio">
+					<td class="date">12.28.20</td>
+					<td class="project"><a href="audio/salute-the-cube.mp3">Salute the Cube</a></td>
+				</tr>
 				<tr class="etc">
 					<td class="date">12.04.20</td>
 					<td class="project"><a href="https://www.instagram.com/ar/2785873261740920/">Outlines</a></td>
