Man DeLorean credit + fireworks

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 				</tr>
 				<tr class="video">
 					<td class="date">02.09.20</td>
-					<td class="project"><a href="video/park-city-ski-run.mp4">Park City Ski Run</a></td>
+					<td class="project"><a href="video/park-city-ski-run.mp4">Park City</a> (music: <a href="https://open.spotify.com/artist/6Pe7224GiQTfT7tsjKe46Q?si=a7leLInoSJmrggpLTzUYCQ">Man DeLorean</a>)</td>
 				</tr>
 				<tr class="etc">
 					<td class="date">01.25.20</td>
@@ -564,6 +564,10 @@
 				<tr class="text">
 					<td class="date">04.01.12</td>
 					<td class="project"><a href="text/incompleteness.txt">Incompleteness</a></td>
+				</tr>
+				<tr class="etc">
+					<td class="date">1.10.12</td>
+					<td class="project"><a href="http://www.goldberg.io/fireworks/">WebGL Fireworks</a> (with <a href="http://www.goldberg.io">Isaac</a>)</td>
 				</tr>
 				<tr class="text">
 					<td class="date">12.21.11</td>
