--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 				</tr>
 				<tr class="video">
 					<td class="date">02.09.20</td>
-					<td class="project"><a href="video/park-city-ski-run.mp4">Park City</a> (music: <a href="https://open.spotify.com/artist/6Pe7224GiQTfT7tsjKe46Q?si=a7leLInoSJmrggpLTzUYCQ">Man DeLorean</a>)</td>
+					<td class="project"><a href="video/park-city-ski-run.mp4">Park City</a> (music by <a href="https://open.spotify.com/artist/6Pe7224GiQTfT7tsjKe46Q?si=a7leLInoSJmrggpLTzUYCQ">Mando</a>)</td>
 				</tr>
 				<tr class="etc">
 					<td class="date">01.25.20</td>
