--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="video">
+					<td class="date">01.09.21</td>
+					<td class="project"><a href="video/alive.mp4">Alive</a></td>
+				</tr>
 				<tr class="audio">
 					<td class="date">12.28.20</td>
 					<td class="project"><a href="audio/salute-the-cube.mp3">Salute the Cube</a></td>
