--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<table class="list">
 				<tr class="video">
 					<td class="date">01.09.21</td>
-					<td class="project"><a href="video/alive.mp4">Alive</a></td>
+					<td class="project"><a href="video/alive2.mp4">Alive</a></td>
 				</tr>
 				<tr class="audio">
 					<td class="date">12.28.20</td>
