--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
 			</div>
 			
 			<table class="list">
+				<tr class="image">
+					<td class="date">01.17.21</td>
+					<td class="project"><a href="image/dill-gates.jpg">Dill Gates</a></td>
+				</tr>
 				<tr class="video">
 					<td class="date">01.09.21</td>
-					<td class="project"><a href="video/alive2.mp4">Alive</a></td>
+					<td class="project"><a href="video/alive.mp4">Alive</a></td>
 				</tr>
 				<tr class="audio">
 					<td class="date">12.28.20</td>
