--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="text">
+					<td class="date">01.21.21</td>
+					<td class="project"><a href="text/cycles.txt">Cycles</a></td>
+				</tr>
 				<tr class="image">
 					<td class="date">01.17.21</td>
 					<td class="project"><a href="image/dill-gates.jpg">Dill Gates</a></td>
