--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="image">
+					<td class="date">01.31.21</td>
+					<td class="project">Grid Triptych <a href="image/peristalsis.png">[1]</a> <a href="image/crunch.png">[2]</a> <a href="image/waveform.png">[3]</a></td>
+				</tr>
 				<tr class="text">
 					<td class="date">01.21.21</td>
 					<td class="project"><a href="text/cycles.txt">Cycles</a></td>
