Mind's Eye Triptych

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 			
 			<table class="list">
 				<tr class="image">
+					<td class="date">02.15.21</td>
+					<td class="project">Mind's Eye Triptych <a href="image/minds-eye-1.png">[1]</a> <a href="image/minds-eye-2.png">[2]</a> <a href="image/minds-eye-3.png">[3]</a></td>
+				</tr>
+				<tr class="image">
 					<td class="date">01.31.21</td>
 					<td class="project">Grid Triptych <a href="image/peristalsis.png">[1]</a> <a href="image/crunch.png">[2]</a> <a href="image/waveform.png">[3]</a></td>
 				</tr>
