Goop & Kiefer transcription

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 			
 			<table class="list">
 				<tr class="image">
+					<td class="date">05.08.21</td>
+					<td class="project"><a href="image/ethereal-goop.jpg">Ethereal Goop</a></td>
+				</tr>
+				<tr class="etc">
+					<td class="date">04.21.21</td>
+					<td class="project"><a href="https://www.soundslice.com/slices/qfMDc/">What a Day Transcription</a></td>
+				</tr>
+				<tr class="image">
 					<td class="date">02.15.21</td>
 					<td class="project">Mind's Eye Triptych <a href="image/minds-eye-1.png">[1]</a> <a href="image/minds-eye-2.png">[2]</a> <a href="image/minds-eye-3.png">[3]</a></td>
 				</tr>
