New links, new look

--- a/index.html
+++ b/index.html
@@ -35,36 +35,33 @@
     <div class="container">
 	    <div class="main">
 			<div class="header">
-				<p class="name">Matt Nichols</p>
-				
-				<p class="socials">
-					<a class="header" href="https://linktr.ee/flatpickles">BLM</a>
-					<span class="separator">//</span>
-					<a class="header" href="http://instagram.com/flatpickles">Instagram</a>
-					<span class="separator">//</span>
-					<a class="header" href="http://twitter.com/flatpickles">Twitter</a><!--
-					<span class="separator">//</span>
-					<a class="header" href="https://tinyletter.com/flatpickles">Newsletter</a>-->
-					<span class="separator">//</span>
-					<a class="header" href="https://forms.gle/sSUgW9YbK9Xxg21x8">Holler</a>
-				</p>
+				<div class="header_top">
+					<p class="name">Matt Nichols</p>
+					<div class="header_spacer"></div>
+					<a href="http://www.twitter.com/flatpickles"><img class="social" src="src/twitter.png"></a>
+					<a href="http://www.instagram.com/flatpickles"><img class="social" src="src/instagram.png"></a>
+				</div>
 	
 				<p class= "categories">
 					<span class="category selected all" id="all_selector">All</span>
-					<span class="separator">/</span>
+					<span class="separator">|</span>
 					<span class="category unselected audio" id="audio_selector">Audio</span>
-					<span class="separator">/</span>
+					<span class="separator">|</span>
 					<span class="category unselected video" id="video_selector">Video</span>
-					<span class="separator">/</span>
+					<span class="separator">|</span>
 					<span class="category unselected image" id="image_selector">Image</span>
-					<span class="separator">/</span>
+					<span class="separator">|</span>
 					<span class="category unselected text" id="text_selector">Text</span>
-					<span class="separator">/</span>
+					<span class="separator">|</span>
 					<span class="category unselected etc" id="etc_selector">Etc.</span>
 				</p>
 			</div>
 			
 			<table class="list">
+				<tr class="etc">
+					<td class="date">08.08.21</td>
+					<td class="project"><a href="https://paper.dropbox.com/doc/Music-for-Ryan-Jessica--BQSQtmtxGhjczmXJI3UuxdaZAQ-hhmATgKFzLjcsaqbxIE5x">Music for Ryan & Jessica</a></td>
+				</tr>
 				<tr class="image">
 					<td class="date">05.08.21</td>
 					<td class="project"><a href="image/ethereal-goop.jpg">Ethereal Goop</a></td>
