Tweaks and Voice Repitch

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 			
 			<table class="list">
 				<tr class="etc">
+					<td class="date">10.29.21</td>
+					<td class="project"><a href="https://www.instagram.com/ar/934959480790282/">Voice Repitch</a></td>
+				</tr>
+				<tr class="etc">
 					<td class="date">08.08.21</td>
 					<td class="project"><a href="https://paper.dropbox.com/doc/Music-for-Ryan-Jessica--BQSQtmtxGhjczmXJI3UuxdaZAQ-hhmATgKFzLjcsaqbxIE5x">Music for Ryan & Jessica</a></td>
 				</tr>
