--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="text">
+					<td class="date">11.03.21</td>
+					<td class="project"><a href="text/whole.txt">Whole</a></td>
+				</tr>
 				<tr class="etc">
 					<td class="date">10.29.21</td>
 					<td class="project"><a href="https://www.instagram.com/ar/934959480790282/">Voice Repitch</a></td>
