--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="video">
+					<td class="date">11.10.21</td>
+					<td class="project"><a href="https://www.hicetnunc.xyz/objkt/527978">What's Old Is New Again</a></td>
+				</tr>
 				<tr class="text">
 					<td class="date">11.03.21</td>
 					<td class="project"><a href="text/whole.txt">Whole</a></td>
