Randomized footer text

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 	    </div>
 	    
 	    <div class="footer">
-		    <p>A DJ Ham Hands Production</p>
+		    <p class="footer_text">A DJ Ham Hands Production</p>
 	    </div>
     </div>
   </body>
