Flat Picks Season 4

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="etc">
+					<td class="date">12.31.21</td>
+					<td class="project"><a href="https://open.spotify.com/playlist/3hd6tpg5ZUsme35lzG48V2?si=0e059e9fa00e4384">Flat Picks - Season 4</a></td>
+				</tr>
 				<tr class="video">
 					<td class="date">11.10.21</td>
 					<td class="project"><a href="https://hic.af/objkt/527978">What's Old Is New Again</a></td>
