--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="etc">
+					<td class="date">01.19.22</td>
+					<td class="project"><a href="https://www.icloud.com/shortcuts/250054434eaf40f095e7f43ed7ec1c20">Send song.link (iPhone Shortcut)</a></td>
+				</tr>
 				<tr class="video">
 					<td class="date">01.07.22</td>
 					<td class="project"><a href="video/new-piano-noodles.mp4">New Piano Noodles</a></td>
