Links to IG photograpy

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="image">
+					<td class="date">02.21.22</td>
+					<td class="project"><a href="https://www.instagram.com/p/CaQMyDWv8oo/">Recharge Era Montage</a></td>
+				</tr>
 				<tr class="etc">
 					<td class="date">01.19.22</td>
 					<td class="project"><a href="https://www.icloud.com/shortcuts/250054434eaf40f095e7f43ed7ec1c20">Send song.link (Shortcut)</a></td>
@@ -85,6 +89,10 @@
 				<tr class="etc">
 					<td class="date">08.08.21</td>
 					<td class="project"><a href="https://paper.dropbox.com/doc/Music-for-Ryan-Jessica--BQSQtmtxGhjczmXJI3UuxdaZAQ-hhmATgKFzLjcsaqbxIE5x">Music for Ryan & Jessica</a></td>
+				</tr>
+				<tr class="image">
+					<td class="date">07.08.21</td>
+					<td class="project"><a href="https://www.instagram.com/p/CRFXcrwNGRk/">Inner Sunset Night Photos</a></td>
 				</tr>
 				<tr class="image">
 					<td class="date">05.08.21</td>
