--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 			
 			<table class="list">
 				<tr class="image">
+					<td class="date">02.23.22</td>
+					<td class="project"><a href="image/quick-pick.png">Quick Pick</a></td>
+				</tr>
+				<tr class="image">
 					<td class="date">02.21.22</td>
 					<td class="project"><a href="https://www.instagram.com/p/CaQMyDWv8oo/">Recharge Era Montage</a></td>
 				</tr>
