--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<table class="list">
 				<tr class="image">
 					<td class="date">02.23.22</td>
-					<td class="project"><a href="image/quick-pick.png">Quick Pick</a></td>
+					<td class="project"><a href="image/quick-pick-02.png">Quick Pick</a></td>
 				</tr>
 				<tr class="image">
 					<td class="date">02.21.22</td>
