--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="audio">
+					<td class="date">03.27.22</td>
+					<td class="project"><a href="audio/sauce-on-it-06.mp3">Sauce On It</a></td>
+				</tr>
 				<tr class="image">
 					<td class="date">02.23.22</td>
 					<td class="project"><a href="image/quick-pick-02.png">Quick Pick</a></td>
