--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="header_top">
 					<p class="name">Matt Nichols</p>
 					<div class="header_spacer"></div>
-					<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="social" src="src/twitter.png"></a>
+					<a href="https://twitter.com/flatpickles"><img class="social" src="src/twitter.png"></a>
 					<a href="http://www.instagram.com/flatpickles"><img class="social" src="src/instagram.png"></a>
 				</div>
 	
