--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
 					<td class="date">01.31.21</td>
 					<td class="project">Grid Triptych <a href="image/peristalsis.png">[1]</a> <a href="image/crunch.png">[2]</a> <a href="image/waveform.png">[3]</a></td>
 				</tr>
+				<tr class="etc">
+					<td class="date">01.27.21</td>
+					<td class="project"><a href="https://editor.isf.video/shaders/624d2c1efa14610014854030">Wobbly</a></td>
+				</tr>
 				<tr class="text">
 					<td class="date">01.21.21</td>
 					<td class="project"><a href="text/cycles.txt">Cycles</a></td>
@@ -129,6 +133,10 @@
 				<tr class="video">
 					<td class="date">01.09.21</td>
 					<td class="project"><a href="video/alive.mp4">Alive</a></td>
+				</tr>
+				<tr class="etc">
+					<td class="date">01.01.21</td>
+					<td class="project"><a href="https://editor.isf.video/shaders/624d2c75fa14610014854058">Warpy</a></td>
 				</tr>
 				<tr class="audio">
 					<td class="date">12.28.20</td>
