--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				</tr>
 				<tr class="etc">
 					<td class="date">01.27.21</td>
-					<td class="project"><a href="https://editor.isf.video/shaders/624d2c1efa14610014854030">Wobbly</a></td>
+					<td class="project"><a href="https://editor.isf.video/shaders/624d2c1efa14610014854030">Wobbly Shader</a></td>
 				</tr>
 				<tr class="text">
 					<td class="date">01.21.21</td>
@@ -136,7 +136,7 @@
 				</tr>
 				<tr class="etc">
 					<td class="date">01.01.21</td>
-					<td class="project"><a href="https://editor.isf.video/shaders/624d2c75fa14610014854058">Warpy</a></td>
+					<td class="project"><a href="https://editor.isf.video/shaders/624d2c75fa14610014854058">Warpy Shader</a></td>
 				</tr>
 				<tr class="audio">
 					<td class="date">12.28.20</td>
