--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="etc">
+					<td class="date">04.08.22</td>
+					<td class="project"><a href="https://editor.isf.video/shaders/62506e017917e40014095a49">Floppy Disk</a></td>
+				</tr>
 				<tr class="audio">
 					<td class="date">03.27.22</td>
 					<td class="project"><a href="audio/sauce-on-it-07.mp3">Sauce On It</a></td>
