--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="text">
+					<td class="date">04.10.22</td>
+					<td class="project"><a href="matt-nichols-resume.pdf">Matt Nichols Resume 2022</a></td>
+				</tr>
 				<tr class="etc">
 					<td class="date">04.08.22</td>
 					<td class="project"><a href="https://editor.isf.video/shaders/62506e017917e40014095a49">Floppy Disk</a></td>
