we know what year it is y'all

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<table class="list">
 				<tr class="text">
 					<td class="date">04.10.22</td>
-					<td class="project"><a href="matt-nichols-resume.pdf">Matt Nichols Resume 2022</a></td>
+					<td class="project"><a href="matt-nichols-resume.pdf">Matt Nichols Resume</a></td>
 				</tr>
 				<tr class="etc">
 					<td class="date">04.08.22</td>
