--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 			integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
 			crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://rawgit.com/patriciogonzalezvivo/glslCanvas/master/dist/GlslCanvas.js"></script>
     <script src="src/script.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -667,5 +668,7 @@
 		    <p class="footer_text">A DJ Ham Hands Production</p>
 	    </div>
     </div>
+
+	<canvas class="glslCanvas" data-fragment-url="src/background.frag"></canvas>
   </body>
 </html>
