--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, width=480">
     
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="src/favicon.ico">
+    <meta name="description" content="A personal website for Matt Nichols, aka Flat Pickles.">
+    <meta name="author" content="Matt Nichols">
+	<meta name="keywords" content="Matt, Nichols, Flat, Pickles">
 
     <title>Matt Nichols</title>
+
+    <link rel="icon" href="src/favicon.ico">
+
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Black_web.woff" type="font/woff" crossorigin="anonymous">
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Black_web.woff2" type="font/woff2" crossorigin="anonymous">
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Light_web.woff" type="font/woff" crossorigin="anonymous">
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Light_web.woff2" type="font/woff2" crossorigin="anonymous">
+	<link rel="preload" as="font" href="fonts/Vulf_Sans-Regular.woff" type="font/woff" crossorigin="anonymous">
+	<link rel="preload" as="font" href="fonts/Vulf_Sans-Regular.woff2" type="font/woff2" crossorigin="anonymous">
+	<link rel="preload" as="font" href="fonts/Vulf_Sans-Light.woff" type="font/woff" crossorigin="anonymous">
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Light_web.woff2" type="font/woff2" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles.css">
@@ -29,7 +40,6 @@
 
 	  gtag('config', 'UA-175605739-1');
 	</script>
-
   </head>
 
   <body>
