--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="etc">
+					<td class="date">06.14.22</td>
+					<td class="project"><a href="https://flatpickles.com/GutenBard">GutenBard</a></td>
+				</tr>
 				<tr class="text">
 					<td class="date">04.10.22</td>
 					<td class="project"><a href="matt-nichols-resume.pdf">Matt Nichols Resume</a></td>
