--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="image">
+					<td class="date">06.16.22</td>
+					<td class="project"><a href="image/mandelbrot-render.png">Mandelbrot Render</a></td>
+				</tr>
 				<tr class="etc">
 					<td class="date">06.14.22</td>
 					<td class="project"><a href="https://flatpickles.com/GutenBard">GutenBard</a></td>
