--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="text">
+					<td class="date">07.07.22</td>
+					<td class="project"><a href="text/onward.png">Onward</a></td>
+				</tr>
 				<tr class="image">
 					<td class="date">06.16.22</td>
 					<td class="project"><a href="image/mandelbrot-render.png">Mandelbrot Render</a></td>
