Glitchy video effect

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 			</div>
 			
 			<table class="list">
+				<tr class="etc">
+					<td class="date">07.11.22</td>
+					<td class="project"><a href="https://editor.isf.video/shaders/62bb5b57ad0a68001af75b57">Glitchy Video Effect</a></td>
+				</tr>
 				<tr class="text">
 					<td class="date">07.07.22</td>
 					<td class="project"><a href="text/onward.png">Onward</a></td>
@@ -153,7 +157,7 @@
 				</tr>
 				<tr class="etc">
 					<td class="date">01.27.21</td>
-					<td class="project"><a href="https://editor.isf.video/shaders/624d2c1efa14610014854030">Wobbly Shader</a></td>
+					<td class="project"><a href="https://editor.isf.video/shaders/624d2c1efa14610014854030">Wobbly Video Effect</a></td>
 				</tr>
 				<tr class="text">
 					<td class="date">01.21.21</td>
@@ -169,7 +173,7 @@
 				</tr>
 				<tr class="etc">
 					<td class="date">01.01.21</td>
-					<td class="project"><a href="https://editor.isf.video/shaders/624d2c75fa14610014854058">Warpy Shader</a></td>
+					<td class="project"><a href="https://editor.isf.video/shaders/624d2c75fa14610014854058">Warpy Video Effect</a></td>
 				</tr>
 				<tr class="audio">
 					<td class="date">12.28.20</td>
