--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 			integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
 			crossorigin="anonymous"></script>
-	<script type="text/javascript" src="https://rawgit.com/patriciogonzalezvivo/glslCanvas/master/dist/GlslCanvas.js"></script>
-    <script src="src/script.js"></script>
+	<script type="text/javascript" src="src/GlslCanvas.js"></script>
+    <script type="text/javascript" src="src/script.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175605739-1"></script>
