No Signal (Sketchbook)

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 			
 			<table class="list">
 				<tr class="etc">
+					<td class="date">06.14.22</td>
+					<td class="project"><a href="https://flatpickles.com/sketchbook">No Signal (Sketchbook)</a></td>
+				</tr>
+				<tr class="etc">
 					<td class="date">07.11.22</td>
 					<td class="project"><a href="https://editor.isf.video/shaders/62bb5b57ad0a68001af75b57">Glitchy Video Effect</a></td>
 				</tr>
