No Signal direct link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<table class="list">
 				<tr class="etc">
 					<td class="date">08.15.22</td>
-					<td class="project"><a href="https://flatpickles.com/sketchbook">No Signal (Sketchbook)</a></td>
+					<td class="project"><a href="https://flatpickles.com/sketchbook/#no-signal">No Signal (Sketchbook)</a></td>
 				</tr>
 				<tr class="etc">
 					<td class="date">07.11.22</td>
