--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
 			
 			<table class="list">
 				<tr class="etc">
+					<td class="date">09.14.22</td>
+					<td class="project"><a href="https://flatpickles.com/sketchbook/#rectilinear">Rectilinear</a></td>
+				</tr>
+				<tr class="etc">
 					<td class="date">08.15.22</td>
-					<td class="project"><a href="https://flatpickles.com/sketchbook/#no-signal">No Signal (Sketchbook)</a></td>
+					<td class="project"><a href="https://flatpickles.com/sketchbook/#no-signal">No Signal</a> (<a href="https://github.com/flatpickles/sketchbook">Sketchbook</a>)</td>
 				</tr>
 				<tr class="etc">
 					<td class="date">07.11.22</td>
