--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				</tr>
 				<tr class="etc">
 					<td class="date">04.08.22</td>
-					<td class="project"><a href="https://editor.isf.video/shaders/62506e017917e40014095a49">Floppy Disk</a></td>
+					<td class="project"><a href="https://flatpickles.com/sketchbook/#floppy-disk">Floppy Disk</a></td>
 				</tr>
 				<tr class="audio">
 					<td class="date">03.27.22</td>
