Mandelbrot Set Viewer

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 			
 			<table class="list">
 				<tr class="etc">
+					<td class="date">09.29.22</td>
+					<td class="project"><a href="https://flatpickles.com/sketchbook/#mandelbrot-set">Mandelbrot Set Viewer</a></td>
+				</tr>
+				<tr class="etc">
 					<td class="date">09.14.22</td>
 					<td class="project"><a href="https://flatpickles.com/sketchbook/#rectilinear">Rectilinear</a></td>
 				</tr>
