--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 	<meta name="keywords" content="Matt, Nichols, Flat, Pickles">
 
     <title>Matt Nichols</title>
+	
+	<link rel="me" href="https://xoxo.zone/@flatpickles" />
+	<link rel="me" href="https://github.com/flatpickles" />
+	<link rel="me" href="https://twitter.com/flatpickles" />
 
-    <link rel="icon" href="src/favicon.ico">
+    <link rel="icon" href="src/favicon.ico" />
 
-	<link rel="preload" as="font" href="fonts/Vulf_Mono-Black_web.woff" type="font/woff" crossorigin="anonymous">
-	<link rel="preload" as="font" href="fonts/Vulf_Mono-Black_web.woff2" type="font/woff2" crossorigin="anonymous">
-	<link rel="preload" as="font" href="fonts/Vulf_Mono-Light_web.woff" type="font/woff" crossorigin="anonymous">
-	<link rel="preload" as="font" href="fonts/Vulf_Mono-Light_web.woff2" type="font/woff2" crossorigin="anonymous">
-	<link rel="preload" as="font" href="fonts/Vulf_Sans-Regular.woff" type="font/woff" crossorigin="anonymous">
-	<link rel="preload" as="font" href="fonts/Vulf_Sans-Regular.woff2" type="font/woff2" crossorigin="anonymous">
-	<link rel="preload" as="font" href="fonts/Vulf_Sans-Light.woff" type="font/woff" crossorigin="anonymous">
-	<link rel="preload" as="font" href="fonts/Vulf_Mono-Light_web.woff2" type="font/woff2" crossorigin="anonymous">
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Black_web.woff" type="font/woff" crossorigin="anonymous" />
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Black_web.woff2" type="font/woff2" crossorigin="anonymous" />
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Light_web.woff" type="font/woff" crossorigin="anonymous" />
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Light_web.woff2" type="font/woff2" crossorigin="anonymous" />
+	<link rel="preload" as="font" href="fonts/Vulf_Sans-Regular.woff" type="font/woff" crossorigin="anonymous" />
+	<link rel="preload" as="font" href="fonts/Vulf_Sans-Regular.woff2" type="font/woff2" crossorigin="anonymous" />
+	<link rel="preload" as="font" href="fonts/Vulf_Sans-Light.woff" type="font/woff" crossorigin="anonymous" />
+	<link rel="preload" as="font" href="fonts/Vulf_Mono-Light_web.woff2" type="font/woff2" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <link rel="stylesheet" href="src/styles.css" />
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 			integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
