Move links to sketchbook subdomain

--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
 			<table class="list">
 				<tr class="etc">
 					<td class="date">10.29.22</td>
-					<td class="project"><a href="https://flatpickles.com/sketchbook/#ethereal-goop">Ethereal Goop v2</a></td>
+					<td class="project"><a href="https://sketchbook.flatpickles.com/#ethereal-goop">Ethereal Goop v2</a></td>
 				</tr>
 				<tr class="etc">
 					<td class="date">09.29.22</td>
-					<td class="project"><a href="https://flatpickles.com/sketchbook/#mandelbrot-set">Mandelbrot Set Viewer</a></td>
+					<td class="project"><a href="https://sketchbook.flatpickles.com/#mandelbrot-set">Mandelbrot Set Viewer</a></td>
 				</tr>
 				<tr class="etc">
 					<td class="date">09.14.22</td>
-					<td class="project"><a href="https://flatpickles.com/sketchbook/#rectilinear">Rectilinear</a></td>
+					<td class="project"><a href="https://sketchbook.flatpickles.com/#rectilinear">Rectilinear</a></td>
 				</tr>
 				<tr class="etc">
 					<td class="date">08.15.22</td>
-					<td class="project"><a href="https://flatpickles.com/sketchbook/#no-signal">No Signal</a> (<a href="https://github.com/flatpickles/sketchbook">Sketchbook</a>)</td>
+					<td class="project"><a href="https://sketchbook.flatpickles.com/#no-signal">No Signal</a> (<a href="https://github.com/flatpickles/sketchbook">Sketchbook</a>)</td>
 				</tr>
 				<tr class="etc">
 					<td class="date">07.11.22</td>
@@ -113,7 +113,7 @@
 				</tr>
 				<tr class="etc">
 					<td class="date">04.08.22</td>
-					<td class="project"><a href="https://flatpickles.com/sketchbook/#floppy-disk">Floppy Disk</a></td>
+					<td class="project"><a href="https://sketchbook.flatpickles.com/#floppy-disk">Floppy Disk</a></td>
 				</tr>
 				<tr class="audio">
 					<td class="date">03.27.22</td>
