--- a/index.html
+++ b/index.html
@@ -75,9 +75,13 @@
 			</div>
 			
 			<table class="list">
+				<tr class="text">
+					<td class="date">01.21.23</td>
+					<td class="project"><a href="text/retiring-v1.txt">Retiring flatpickles.com v1</a></td>
+				</tr>
 				<tr class="etc">
 					<td class="date">10.29.22</td>
-					<td class="project"><a href="https://sketchbook.flatpickles.com/#ethereal-goop">Ethereal Goop v2</a></td>
+					<td class="project"><a href="https://sketchbook.flatpickles.com/#ethereal-goop">Ethereal Goop</a></td>
 				</tr>
 				<tr class="etc">
 					<td class="date">09.29.22</td>
@@ -161,7 +165,7 @@
 				</tr>
 				<tr class="image">
 					<td class="date">05.08.21</td>
-					<td class="project"><a href="image/ethereal-goop.jpg">Ethereal Goop</a></td>
+					<td class="project"><a href="image/ethereal-goop.jpg">Ethereal Goop v1</a></td>
 				</tr>
 				<tr class="etc">
 					<td class="date">04.21.21</td>
